# cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  client.rs  config.rs  kubeconfig.rs  main.rs
src/client/: error.rs  mod.rs  types.rs
src/commands/: account.rs  add_on.rs  auth.rs  build.rs  cluster.rs  local.rs  mod.rs  project.rs
~/.canine/: canine.yaml
