[package]
name = "canine-cli"
version = "0.1.23"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"
url = "2.5"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.148"
colored = "3.0.0"
tabled = "0.20.0"
strum = { version = "0.26", features = ["derive"] }
dirs = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.8"


[dev-dependencies]
wiremock = "0.6"

[[bin]]
name = "canine"
path = "src/main.rs"
